Fixed the maincontainer's spacing

--- a/Css/style2.css
+++ b/Css/style2.css
@@ -12,7 +12,6 @@
     margin-right:auto;
     padding-top: 0.5em;
     margin-top: 1em;
-    padding-left: 2em;
     display:block;/*Children are block's unless displayed differently*/
     border-radius: 0.2rem;
     box-shadow: 0 10px 50px rgba(0, 0, 0, 0.1);
@@ -22,13 +21,14 @@
     display: flex;
     flex-direction: row;
     width: 100%;
+    margin: 0%;
     justify-content: space-evenly;
   }
   .subHeading{
     width: 100%;
     height: 50%;
     background: #c5c6c7;
-    margin-top: 10px;
+    margin-top: 40px;
     margin-bottom: 1em;
   }
   .card-tours{
